# hole-finder

./: API.md  CLAUDE.md  Dockerfile  README.md  RESEARCH_CITED.md  docker-compose.prod.yml  info.yml  pyproject.toml  run_tests_local.sh
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: b002_comments_and_saves.py  b003_add_new_states.py  e18ee75b19f6_initial_schema.py
configs/osmium/: buildings.json  cemeteries.json  landuse.json  railways.json  roads.json  water.json
configs/passes/: aggressive_cave.toml  cave_hunting.toml  lava_tube_detection.toml  mine_detection.toml  salt_dome_detection.toml  sinkhole_survey.toml
configs/regions/: allegheny_county.geojson  central_ky_karst.geojson  coastal_me.geojson  delaware.geojson  east_tn_karst.geojson  eastern_ohio.geojson  eastern_pa.geojson  middle_tn_karst.geojson  north_louisiana.geojson  northern_ca_lava.geojson  nw_nj_karst.geojson  rhode_island.geojson  shenandoah_valley.geojson  sierra_nevada.geojson  south_louisiana.geojson  southern_ca_desert.geojson  southern_in_karst.geojson  upstate_ny.geojson  west_virginia.geojson  western_ct.geojson  western_ma.geojson  western_md.geojson  western_nc.geojson  western_pa.geojson  western_vt.geojson  white_mountains_nh.geojson
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  utils.ts
frontend/src/api/: client.ts
frontend/src/components/Explore/: BottomDrawer.tsx  DetectionCard.tsx  ProcessingScreen.tsx  SearchButton.tsx  SettingsPanel.tsx  SwipeCard.tsx  TopBar.tsx
frontend/src/components/Map/: DrawControl.tsx  MapView.tsx
frontend/src/components/Sidebar/: DetailPanel.tsx  FilterPanel.tsx  JobPanel.tsx  Sidebar.tsx
frontend/src/hooks/: useDetections.ts  useJobProgress.ts  useJobs.ts  useRegions.ts
frontend/src/pages/: LandingPage.tsx  PlaygroundPage.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
nginx/: anomalies.martinospizza.dev  holefinder.martinospizza.dev
scripts/: 502.html  download_ground_truth.py  seed_validation_sites.py  wake_service.py
src/hole_finder/: cli.py  config.py  main.py
src/hole_finder/api/: deps.py  schemas.py
src/hole_finder/api/routes/: comments.py  datasets.py  debug.py  detections.py  exports.py  geocode.py  jobs.py  raster_tiles.py  tiles.py  validation.py  websocket.py
src/hole_finder/db/: engine.py  models.py  repositories.py
src/hole_finder/detection/: array_backend.py  base.py  fusion.py  registry.py  runner.py
src/hole_finder/detection/passes/: curvature.py  fill_difference.py  local_relief_model.py  morphometric_filter.py  multi_return.py  point_density.py  random_forest.py  sky_view_factor.py  tpi.py  unet_segmentation.py  yolo_detector.py
src/hole_finder/detection/postprocess/: building_filter.py  classification.py  clustering.py  infrastructure_filter.py  morphometrics.py  pipeline_glue.py  post_fuse_gate.py  rim_slope_filter.py
src/hole_finder/ingest/: manager.py
src/hole_finder/ingest/ground_truth/: ca_blm_aml.py  la_subsidence.py  loader.py  ma_mines.py  md_karst.py  nc_caves.py  ohio_karst.py  pa_aml.py  pasda_karst.py  usgs_national.py  usgs_ny_karst.py
src/hole_finder/ingest/sources/: base.py  ct_lidar.py  ky_lidar.py  md_lidar.py  nc_lidar.py  nj_lidar.py  ny_lidar.py  oh_ogrip.py  pasda.py  tnm_lidar.py  usgs_3dep.py  va_lidar.py  wv_lidar.py
src/hole_finder/ml/: training.py
src/hole_finder/processing/: dem.py  derivatives.py  pipeline.py  point_cloud.py  tile_manager.py
src/hole_finder/utils/: crs.py  geo.py  log_manager.py  osm_data.py  overpass.py  perf.py  raster_io.py  storage.py
src/hole_finder/workers/: callbacks.py  celery_app.py  tasks.py
src/magic_eyes/: cli.py  main.py
src/magic_eyes/api/routes/: comments.py  detections.py
src/magic_eyes/db/: models.py
src/magic_eyes/detection/: runner.py
src/magic_eyes/detection/passes/: fill_difference.py  tpi.py
src/magic_eyes/ingest/: manager.py
src/magic_eyes/ingest/ground_truth/: loader.py  ohio_karst.py  pa_aml.py  pasda_karst.py  usgs_national.py  usgs_ny_karst.py
src/magic_eyes/ingest/sources/: ny_lidar.py  oh_ogrip.py  pasda.py  usgs_3dep.py  wv_lidar.py
src/magic_eyes/processing/: derivatives.py
tests/: conftest.py
tests/fixtures/: known_sites.json  synthetic_dem.py
tests/integration/: test_api.py
tests/unit/: test_api.py  test_crs.py  test_derivatives.py  test_detection_passes.py  test_infrastructure_filter_v2.py  test_ingest.py  test_ml_passes.py  test_osmium_serialization.py  test_overpass.py  test_post_fuse_chain.py  test_post_fuse_gate.py  test_postprocess_filters.py  test_rim_slope_filter.py
tests/validation/: test_known_sites.py
