[project]
name = "magic-eyes"
version = "0.1.0"
description = "LiDAR-based terrain anomaly detection platform for caves, mines, and sinkholes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"

dependencies = [
    # Geospatial core
    # "pdal>=3.4",  # requires system PDAL; installed on remote worker only
    "rasterio>=1.3",
    "numpy>=1.26",
    "scipy>=1.12",
    "shapely>=2.0",
    "geopandas>=0.14",
    "fiona>=1.9",
    "pyproj>=3.6",
    "rtree>=1.2",
    "whitebox>=2.3",

    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "geoalchemy2>=0.15",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Task queue
    "celery[redis]>=5.4",
    "redis>=5.0",

    # ML (CPU)
    "scikit-learn>=1.4",
    "scikit-image>=0.22",
    "joblib>=1.3",

    # Data access
    "httpx>=0.27",
    "pystac-client>=0.8",
    "boto3>=1.34",

    # Config
    "tomli>=2.0; python_version < '3.11'",

    # Logging
    "structlog>=24.1",

    # CLI
    "click>=8.1",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "segmentation-models-pytorch>=0.3.4",
    "ultralytics>=8.2.0",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
magic-eyes = "magic_eyes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magic_eyes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "validation: marks validation tests against real data",
    "integration: marks integration tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
